Fixed attachments' thumbnails cropping

--- a/app/assets/css/common.css
+++ b/app/assets/css/common.css
@@ -79,38 +79,16 @@ ng-md-icon {
     left: 16px;
     width: 150px;
     height: 150px;
-    overflow: hidden;
 }
 
-.note .attachment-container img {
-    position: absolute;
-    left: 50%;
-    top: 50%;
+img.fit {
+    width: 100%;
     height: 100%;
-    width: auto;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    object-fit: cover;
 }
 
 
 /* Detail */
-
-.detail-attachments md-grid-tile {
-    /*transition: all 500ms ease-out 100ms;*/
-    overflow: hidden;
-}
-
-.detail-attachments md-grid-tile img {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    height: 100%;
-    width: auto;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
 
 .note-detail .note-title input {
     font-weight: bolder;
